# commit0-analyzer

./: .gitignore  .golangci.yml  Makefile  README.md  buf.gen.js.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  lefthook.yml
.github/workflows/: ci.yml
cmd/anst/: doc.go  main.go
cmd/commit0-analyzer/: doc.go  main.go
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  soundness-limits.md  system-architecture.md  usage.md
internal/advisory/: cache.go  cache_test.go  cargo_semver.go  cargo_semver_test.go  comparator_registry.go  comparator_registry_test.go  composer_version.go  composer_version_test.go  conflict.go  conflict_test.go  cvss.go  cvss_test.go  cwe.go  cwe_names.go  cwe_test.go  doc.go  enrichment.go  enrichment_test.go  epss.go  epss_test.go  fetcher.go  fetcher_test.go  ghsa_source.go  ghsa_source_test.go  gitlab_source.go  gitlab_source_test.go  govulndb.go  govulndb_test.go  hex_version.go  hex_version_test.go  kev.go  kev_test.go  maven_version.go  maven_version_test.go  merge.go  merge_test.go  model.go  model_test.go  npm_osv_test.go  npm_semver.go  (+22 more)
internal/cli/: deps_install.go  deps_install_test.go  doc.go  ecosystem_detection_test.go  ecosystem_hex.go  ecosystem_hex_test.go  ecosystem_maven.go  ecosystem_maven_test.go  ecosystem_nuget.go  ecosystem_nuget_test.go  ecosystem_packagist.go  ecosystem_packagist_test.go  ecosystem_pub.go  ecosystem_pub_test.go  ecosystem_registry.go  ecosystem_registry_test.go  root.go  (+15 more)
plugins/python-reachability/testdata/dep-type-uv/: pyproject.toml
(+375 files in other folders)
